--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,18 @@
 <html>
 <head>
   <title>Habit Tracker</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <header>Track Your Habits</header>
+  <button id="newHabit">New Habit</button>
+  <button id="newWeek">New Week</button>
+  <center><header>Track Your Habits</header></center>
+    <center><div id="week">
+      <span>Sunday</span> <span>Monday</span> <span>Tuesday</span> <span>Wednesday</span> <span>Thursday</span> <span>Friday</span> <span>Saturday</span>
+    </div></center>
+
+
+
   <div id="app"></div>
 
   <script type="text/javascript" src="bundle.js"></script>
